# advent-of-code-23

./: .gitignore  pyproject.toml
code/: conftest.py
code/day_01/: part1.txt  part_1.py  part_2.py  test_part_1.py
code/day_02/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
code/day_03/: info.txt  part_1.py  part_2.py  test_part_1.py  test_part_2.py
code/day_04/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
code/day_05/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
code/day_06/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
code/day_07/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
code/day_08/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
code/day_09/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
code/day_10/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
code/day_11/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
code/day_12/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
code/day_13/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
code/day_14/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
code/day_15/: info.txt  part_1.py  part_2.py  test_part_1.py  test_part_2.py
code/day_16/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
code/day_17/: test_part_1.py  test_part_2.py
code/day_18/: info.txt  part_1.py  part_2.py  test_part_1.py  test_part_2.py
code/day_19/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
code/day_20/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
code/day_21/: part_1.py  part_2.py  test_part_1.py  (+1 more)
(+4 files in other folders)
