[tool.poetry]
name = "code"
version = "1.0.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
black = "^23.11.0"
shapely = "^2.0.2"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
